src/objects/DataObject__c.object
<CustomObject>
    <description>Define and document data from a variety of sources. Provides usage and ownership information.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the object and how it is used.</description>
        <inlineHelpText>Description of the object and how it is used.</inlineHelpText>
        <label>Description</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FormName__c</fullName>
        <description>The form or tab that is directly tied to this data that user input may occur through. Multiple maybe defined comma separated.</description>
        <inlineHelpText>The form or tab that is directly tied to this data that user input may occur through. Multiple maybe defined comma separated.</inlineHelpText>
        <label>Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>The label that is presented in place of the storage or API name.</description>
        <inlineHelpText>The label that is presented in place of the storage or API name.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifecycle__c</fullName>
        <description>The current status of this definition in the WGU Deployment process.</description>
        <inlineHelpText>The current status of this definition in the WGU Deployment process.</inlineHelpText>
        <label>Lifecycle</label>
        <picklist>
            <picklistValues>
                <fullName>Drawing Board</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Designed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prototyped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ManagementStrategy__c</fullName>
        <defaultValue>&quot;Create - &quot; &amp;br()&amp; &quot;Read - &quot; &amp;br()&amp; &quot;Update - &quot; &amp;br()&amp; &quot;Delete - &quot; &amp;br()&amp; &quot;Archive - &quot; &amp;br()&amp; &quot;Report - &quot;</defaultValue>
        <description>The strategy for managing data in this source.</description>
        <label>Management Strategy</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParentObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Data Object that this definition is a child of.</description>
        <inlineHelpText>The Data Object that this definition is a child of.</inlineHelpText>
        <label>Parent Object</label>
        <referenceTo>DataObject__c</referenceTo>
        <relationshipLabel>Child Objects</relationshipLabel>
        <relationshipName>ChildObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <description>Space separated list of tags that this data object is associated.</description>
        <inlineHelpText>Space separated list of tags that this data object is associated.</inlineHelpText>
        <label>Tags</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Defines the usage type for this data source.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Source</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cache</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Control</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Data Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Database_com</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DataObject__c.Databasecom</value>
        </filters>
        <label>All Database.com</label>
    </listViews>
    <listViews>
        <fullName>All_JSON_Objects</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DataObject__c.JSONDocument</value>
        </filters>
        <label>All JSON Document Objects</label>
    </listViews>
    <listViews>
        <fullName>All_iModules</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DataObject__c.iModules</value>
        </filters>
        <label>All iModules</label>
    </listViews>
    <listViews>
        <fullName>Oracle_FAISMGR_Schema</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>faismgr.</value>
        </filters>
        <label>Oracle FAISMGR Schema</label>
    </listViews>
    <listViews>
        <fullName>Oracle_WGUAAP_schema</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>WGUAAP.</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DataObject__c.Oracle</value>
        </filters>
        <label>Oracle WGUAAP Schema</label>
    </listViews>
    <listViews>
        <fullName>Oracle_WGUBANNER_Schema</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>WGUBANNER.</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DataObject__c.Oracle</value>
        </filters>
        <label>Oracle WGUBANNER Schema</label>
    </listViews>
    <listViews>
        <fullName>Oracle_WGUCOS_Schema</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>WGUCOS.</value>
        </filters>
        <label>Oracle WGUCOS Schema</label>
    </listViews>
    <listViews>
        <fullName>Oracle_WGUEA_Schema</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>WGUEA.</value>
        </filters>
        <label>Oracle WGUEA Schema</label>
    </listViews>
    <listViews>
        <fullName>Oracle_WGUFDP_Schema</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>WGUFDP.</value>
        </filters>
        <label>Oracle WGUFDP Schema</label>
    </listViews>
    <listViews>
        <fullName>Oracle_WGUFROMSALESFORCE_Schema</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>WGUFROMSALESFORCE.</value>
        </filters>
        <label>Oracle WGUFROMSALESFORCE Schema</label>
    </listViews>
    <listViews>
        <fullName>Oracle_WGUFR_Schema</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>WGUFR.</value>
        </filters>
        <label>Oracle WGUFR Schema</label>
    </listViews>
    <listViews>
        <fullName>Oracle_WGULR_Schema</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>WGULR.</value>
        </filters>
        <label>Oracle WGULR Schema</label>
    </listViews>
    <listViews>
        <fullName>Oracle_WGUPROGRAMS_Schema</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>WGUPROGRAMS.</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DataObject__c.Oracle</value>
        </filters>
        <label>Oracle WGUPROGRAMS Schema</label>
    </listViews>
    <listViews>
        <fullName>Oracle_WGUSALESFORCE_Schema</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>WGUSALESFORCE.</value>
        </filters>
        <label>Oracle WGUSALESFORCE Schema</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Ia0000001uCC6EAM_00Na000000B6a9AEAR</fullName>
        <active>true</active>
        <field>DataServiceEndpoint__c.RequestContent__c</field>
        <filterItems>
            <field>DataObject__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>JSON Document</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Data Service Endpoint_Request Content</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ia0000001uCC6EAM_00Na000000B6a9KEAR</fullName>
        <active>true</active>
        <field>DataServiceEndpoint__c.ResponseContent__c</field>
        <filterItems>
            <field>DataObject__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>JSON Document</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Data Service Endpoint_Response Content</name>
    </namedFilters>
    <pluralLabel>Data Objects</pluralLabel>
    <recordTypes>
        <fullName>Databasecom</fullName>
        <active>true</active>
        <label>Database.com</label>
    </recordTypes>
    <recordTypes>
        <fullName>JSONDocument</fullName>
        <active>true</active>
        <description>A universally encoded representation of information common to all WGU service layer APIs.</description>
        <label>JSON Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>Oracle</fullName>
        <active>true</active>
        <label>Oracle</label>
    </recordTypes>
    <recordTypes>
        <fullName>iModules</fullName>
        <active>true</active>
        <description>Data storage in the iModules service used by WGU.</description>
        <label>iModules</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>